--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 <body>
     <section class="container">
         <div id="app" class="card">
-            <div class="card-title">
-                <div></div>
-                <h1 class="title-text"> 
-                    rinnaAI ChatBOT
-                </h1>
+          <div class="card-title">
+            <div>
+              <!-- <img src="img/rinna.png" alt="rinna" class="rinna"> -->
             </div>
+            <h1 class="title-text">rinnaAI ChatBotApp</h1>
+          </div>
+          <!-- MessageListを表示-->
+          <message-list :pending="pending" :messages="messages"></message-list>
+          <message-form :pending="pending" @message-sent="sendMessage"></message-form>
         </div>
-    </section>
-
-    <script type="module" src="js/app.js"></script>
+      </section>
+      
+      <script type="module" src="js/app.js"></script>
 </body>
 </html>
